// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assemble > assemble changes > assembles deps 1`] = `
{
  "changes": [
    {
      "releases": {
        "all": "minor",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
  ],
  "releases": {
    "all": {
      "changes": [
        {
          "releases": {
            "all": "minor",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "minor",
    },
  },
}
`;

exports[`assemble > assemble changes > runs 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
      "tag": undefined,
    },
  ],
  "releases": {
    "@namespaced/assemble2": {
      "changes": [
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "patch",
    },
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "minor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "major",
    },
  },
}
`;

exports[`assemble > assemble changes in preMode > with existing changes and a first bump 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
  ],
  "releases": {
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "preminor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "prerelease",
    },
  },
}
`;

exports[`assemble > assemble changes in preMode > with existing changes and a lower bump 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
  ],
  "releases": {
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "prerelease",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "prerelease",
    },
  },
}
`;

exports[`assemble > assemble changes in preMode > with existing changes that upgrade 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
      "tag": undefined,
    },
  ],
  "releases": {
    "@namespaced/assemble2": {
      "changes": [
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "prepatch",
    },
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "preminor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "premajor",
    },
  },
}
`;

exports[`assemble > assemble changes in preMode > with existing changes with the same bump 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
      "tag": undefined,
    },
  ],
  "releases": {
    "@namespaced/assemble2": {
      "changes": [
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "prepatch",
    },
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "preminor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "prerelease",
    },
  },
}
`;

exports[`assemble > assemble changes in preMode > with no existing changes 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
      "tag": undefined,
    },
  ],
  "releases": {
    "@namespaced/assemble2": {
      "changes": [
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "prepatch",
    },
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "preminor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "premajor",
    },
  },
}
`;

exports[`assemble > special bump types > handles an only noop 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "housekeeping",
        "assemble2": "workflows",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
  ],
  "releases": {
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "housekeeping",
            "assemble2": "workflows",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "noop",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "housekeeping",
            "assemble2": "workflows",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "noop",
    },
  },
}
`;

exports[`assemble > special bump types > valid additional bump types 1`] = `
{
  "changes": [
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
    {
      "releases": {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
      "tag": undefined,
    },
    {
      "releases": {
        "assemble1": "housekeeping",
        "assemble2": "workflows",
      },
      "summary": "This is a test.",
      "tag": undefined,
    },
  ],
  "releases": {
    "@namespaced/assemble2": {
      "changes": [
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
      ],
      "type": "patch",
    },
    "assemble1": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test. We might link out to a [website](https://www.jacobbolda.com).",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "housekeeping",
            "assemble2": "workflows",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "minor",
    },
    "assemble2": {
      "changes": [
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
        {
          "releases": {
            "assemble1": "housekeeping",
            "assemble2": "workflows",
          },
          "summary": "This is a test.",
          "tag": undefined,
        },
      ],
      "type": "major",
    },
  },
}
`;
